--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,8 +30,16 @@
             android:exported="false"/>
 
         <activity android:name=".ProductDetailsActivity">
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.android.productmanager.MainActivity"/>
         </activity>
         <activity android:name=".AddNewProductActivity">
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.android.productmanager.MainActivity"/>
         </activity>
     </application>
 
